<resources>
    <string name="app_name">Proyecto-Moviles</string>
    <string name="bienvenida">Fusce vel fringilla tellus. Quisque vitae mauris purus. Aenean a mattis tortor. Sed tincidunt quis odio eu lacinia.</string>
    <string name="crearcuenta">Crear Cuenta</string>
    <string name="inicarsesion">Inicar Sesión</string>
    <string name="registrarusuario">Registrar Usuario</string>
    <string name="correo">Correo electrónico</string>
    <string name="contra">Constraseña</string>
    <string name="iCorreo">ejemplo@ejemplo.com</string>
    <string name="iContra">Tu contraseña</string>
    <string name="iNombre">Nombres y apellidos</string>
    <string name="iAlias">Nombre identificador</string>
    <string name="iNoCuenta">Número de cuenta</string>
    <string name="iTipoCuenta">Personal o empresarial</string>
    <string name="iRContra">Repetir contraseña</string>
    <string name="guardarS">Guardar Sesión</string>
    <string name="tutarjeta">Tu tarjeta</string>
    <string name="balance">Balance</string>
    <string name="listaTransferencias">Lista de transferencias</string>
    <string name="transferencias">Transferencias</string>
    <string name="infoTransferencias">Elige alguien de tu lista de contactos e ingresa la cantidad que quieras trasnferir.</string>
    <string name="contactos">Contactos</string>
    <string name="infoContactos">Gestiona tu lista de contactos y edita sus datos.</string>
    <string name="monto">Monto</string>
    <string name="dineroTrans">Dinero a transferir</string>
    <string name="agregar">Agregar</string>
    <string name="infoTaarjeta">Inforamción de la tarjeta</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="nombre">Nombre completo</string>
    <string name="alias">Alias</string>
    <string name="cuenta">Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>