<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrar"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imgLogoLogin3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="84dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/blue_logo" />

                <TextView
                    android:id="@+id/etqRegistrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/registrarusuario"
                    android:textColor="#000000"
                    android:textSize="37dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgLogoLogin3" />

                <EditText
                    android:id="@+id/txtAliasNC"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edittext_simple"
                    android:ems="10"
                    android:hint="@string/iNombre"
                    android:inputType="textPersonName"
                    android:paddingLeft="19dp"
                    android:paddingTop="20dp"
                    android:paddingRight="19dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etqRegistrar" />

                <TextView
                    android:id="@+id/etqEmail3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/nombre"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/txtAliasNC"
                    app:layout_constraintTop_toTopOf="@+id/txtAliasNC" />

                <EditText
                    android:id="@+id/txtNombreNC"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edittext_simple"
                    android:ems="10"
                    android:hint="@string/iCorreo"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="19dp"
                    android:paddingTop="20dp"
                    android:paddingRight="19dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtAliasNC" />

                <TextView
                    android:id="@+id/etqContra3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/correo"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/txtNombreNC"
                    app:layout_constraintTop_toTopOf="@+id/txtNombreNC" />

                <EditText
                    android:id="@+id/txtCorreoNC"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edittext_simple"
                    android:ems="10"
                    android:hint="@string/iContra"
                    android:inputType="textPassword"
                    android:paddingLeft="19dp"
                    android:paddingTop="20dp"
                    android:paddingRight="19dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtNombreNC" />

                <TextView
                    android:id="@+id/etqNoCuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/contra"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/txtCorreoNC"
                    app:layout_constraintTop_toTopOf="@+id/txtCorreoNC" />

                <EditText
                    android:id="@+id/txtRepetirContraNC"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edittext_simple"
                    android:ems="10"
                    android:hint="@string/iRContra"
                    android:inputType="textPassword"
                    android:paddingLeft="19dp"
                    android:paddingTop="20dp"
                    android:paddingRight="19dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtCorreoNC" />

                <TextView
                    android:id="@+id/etqContra2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/contra"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/txtRepetirContraNC"
                    app:layout_constraintTop_toTopOf="@+id/txtRepetirContraNC" />

                <EditText
                    android:id="@+id/txtDineroNC"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edittext_simple"
                    android:ems="10"
                    android:hint="Dinero con el que desea abrir la cuenta"
                    android:inputType="numberDecimal"
                    android:paddingLeft="19dp"
                    android:paddingTop="20dp"
                    android:paddingRight="19dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtRepetirContraNC" />

                <TextView
                    android:id="@+id/etqDinero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Dinero"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/txtDineroNC"
                    app:layout_constraintTop_toTopOf="@+id/txtDineroNC" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/blue_button"
        android:fontFamily="@font/poppins_medium"
        android:onClick="registrarUsuario"
        android:stateListAnimator="@null"
        android:text="@string/registrarusuario"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>