<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/tarjeta"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="20dp">

            <ImageView
                android:layout_width="360dp"
                android:layout_height="175dp"
                android:src="@drawable/tarjeta" />


            <TextView
                android:id="@+id/etqTuTarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="22dp"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tutarjeta"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/etqTuTarjeta2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="22dp"
                android:layout_marginTop="86dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/balance"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/etqBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="22dp"
                android:layout_marginTop="111dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="$ 10,000.00"
                android:textColor="@color/white"
                android:textSize="28sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/shadow"
            tools:layout_editor_absoluteY="10dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/listaTransferencias"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tarjeta" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rTransferencias"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>