<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarGuardar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/etqRegistrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Nuevo Contacto"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/txtAliasNC"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edittext_simple"
                    android:ems="10"
                    android:hint="@string/iAlias"
                    android:inputType="textPersonName"
                    android:paddingLeft="19dp"
                    android:paddingTop="20dp"
                    android:paddingRight="19dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etqRegistrar" />

                <TextView
                    android:id="@+id/etqEmail3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/alias"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/txtAliasNC"
                    app:layout_constraintTop_toTopOf="@+id/txtAliasNC" />

                <EditText
                    android:id="@+id/txtNombreNC"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edittext_simple"
                    android:ems="10"
                    android:hint="@string/iNombre"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="19dp"
                    android:paddingTop="20dp"
                    android:paddingRight="19dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtAliasNC" />

                <TextView
                    android:id="@+id/etqContra3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="nombre"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/txtNombreNC"
                    app:layout_constraintTop_toTopOf="@+id/txtNombreNC" />

                <EditText
                    android:id="@+id/txtNoCuentaNC"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edittext_simple"
                    android:ems="10"
                    android:hint="@string/iNoCuenta"
                    android:inputType="textPassword"
                    android:paddingLeft="19dp"
                    android:paddingTop="20dp"
                    android:paddingRight="19dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtNombreNC" />

                <TextView
                    android:id="@+id/etqNoCuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/cuenta"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/txtNoCuentaNC"
                    app:layout_constraintTop_toTopOf="@+id/txtNoCuentaNC" />

                <Spinner
                    android:id="@+id/spTipoCunetaNC"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/edittext_simple"
                    android:ems="10"
                    android:hint="@string/iTipoCuenta"
                    android:inputType="textPersonName"
                    android:paddingLeft="19dp"
                    android:paddingTop="20dp"
                    android:paddingRight="19dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtNoCuentaNC"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/etqNoCuenta2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Tipo de cuenta"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/spTipoCunetaNC"
                    app:layout_constraintTop_toTopOf="@+id/spTipoCunetaNC" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>