<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TransferFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/cardColorGray"
                app:cardCornerRadius="32dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="29dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="29dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardImageT"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:backgroundTint="@color/white"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/icnImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_icons8_account_1" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/contactos"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                        tools:layout_editor_absoluteX="-1dp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/infoContactos"
                        android:textColor="@color/cardText"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        tools:layout_editor_absoluteX="0dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAgregarC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/transparent_white_button"
                android:drawableRight="@drawable/ic_agregar"
                android:fontFamily="@font/poppins_bold"
                android:stateListAnimator="@null"
                android:text="@string/agregar"
                android:textColor="@color/bluebd"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/contactos"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rContactosT"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>